src/main/java/com/example/jats/error/GlobalExceptionHandler.java
package com.example.jats.error;

import com.example.jats.error.exception.BusinessException;
import com.example.jats.error.exception.ErrorCode;
import lombok.Getter;
import org.springframework.http.HttpStatus;
import org.springframework.http.ResponseEntity;
import org.springframework.web.bind.annotation.ExceptionHandler;

@Getter
public class GlobalExceptionHandler {

    @ExceptionHandler(BusinessException.class)
    protected ResponseEntity<ErrorResponse> handleBusinessException(BusinessException e) {
        final ErrorCode code = e.getCode();
        return new ResponseEntity<>(new ErrorResponse(code.getStatus(), code.getMessage()),
                HttpStatus.valueOf(code.getStatus()));
    }
}
